# Appium-Swipe-Actions

./: .gitattributes  .gitignore  .pylintrc  CHANGES.md  README.md  README_pkg.md  __init__.py  mkdocs.yml  pyproject.toml  requirements.txt
demo/: calc_coordinates.py
docs/: index.html  index.md  search.js
docs/appium/: gesture.html
docs/appium/gesture/: actions.html  calculations.html  drag_and_drop.html  enums.html  exceptions.html  pinch.html  swipe.html
docs/interaction/gesture/: actions.html  calculations.html  drag_and_drop.html  enums.html  exceptions.html  pinch.html  swipe.html
docs/reference/: actions.md  calculations.md  drag_and_drop.md  enums.md  exceptions.md  pinch.md  swipe.md
resources/: understanding_element_position-dimension.drawio  viewport_scrollable_bounds.drawio
site/: 404.html  index.html  objects.inv  search.js
site/reference/actions/: index.html
site/reference/calculations/: index.html
site/reference/drag_and_drop/: index.html
site/reference/enums/: index.html
site/reference/exceptions/: index.html
site/reference/pinch/: index.html
site/reference/swipe/: index.html
site/search/: search_index.json
src/appium/gesture/: __init__.py  actions.py  calculations.py  drag_and_drop.py  enums.py  exceptions.py  swipe.py
src/appium/swipe/: __init__.py  actions.py
src/appium_swipe_actions/: core.py
src/enhanced_scroll/: enhanced_scroll.py
src/interaction/gesture/: actions.py  calculations.py  drag_and_drop.py  pinch.py  swipe.py
src/swipe_utilities/: swipe.py
tests/: test_actions.py  test_basic.py  test_calculations.py  test_drag_and_drop.py  test_pinch.py  test_swipe.py
