[project]
name = "interaction.gesture.actions"
version = "0.3.0"
description = "Gesture actions library for Appium"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "appium",
    "actions",
    "gestures",
    "swipe",
    "scroll",
    "pinch",
    "zoom",
    "drag and drop",
]
dependencies = ["appium-python-client>=4.3.0", "selenium>=4.26.1"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pdoc>=15.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.2",
    "twine>=5.1.1",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["interaction*"]
exclude = ["tests", "tests.*"]

[project.urls]
homepage = "https://github.com/tanakrit-d/appium-gesture-actions"
repository = "https://github.com/tanakrit-d/appium-gesture-actions"
issues = "https://github.com/tanakrit-d/appium-gesture-actions/issues"
